--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "react": "18.2.0",
     "react-native": "0.73.2",
-    "react-native-reanimated": "^3.6.1"
+    "react-native-gesture-handler": "^2.14.1",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-reanimated": "^3.6.1",
+    "react-native-svg": "^14.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
